fix gap

--- a/src/$scss$/_Props.scss
+++ b/src/$scss$/_Props.scss
@@ -77,23 +77,9 @@
 
 
         //
-        @property --avail-width {
-            syntax: "<length-percentage>";
-            initial-value: 0px;
-            inherits: true;
-        }
-
-        //
         @property --pixel-ratio {
             syntax: "<number>";
             initial-value: 1;
-            inherits: true;
-        }
-
-        //
-        @property --avail-height {
-            syntax: "<length-percentage>";
-            initial-value: 0px;
             inherits: true;
         }
 
@@ -106,20 +92,6 @@
 
         //
         @property --keyboard-inset-height {
-            syntax: "<length-percentage>";
-            initial-value: 0px;
-            inherits: true;
-        }
-
-        //
-        @property --translate-x {
-            syntax: "<length-percentage>";
-            initial-value: 0px;
-            inherits: true;
-        }
-
-        //
-        @property --translate-y {
             syntax: "<length-percentage>";
             initial-value: 0px;
             inherits: true;
